[tool.poetry]
name="DIMet"
version="0.1.0"
description="revamp DIMet"
readme="README.md"
license = "MIT"
authors = [ 
  "Deisy Johanna Galvis Rodriguez <deisy-johanna.galvis-rodriguez@u-bordeaux.fr>",
  "Slim Karkar <slim.karkar@u-bordeaux.fr>"
]
maintainers = [ "Benjamin Dartigues <benjamin.dartigues@u-bordeaux.fr>", ]
repository = "https://github.com/cbib/DIMet.git"

[tool.poetry.dependencies]
python = "^3.9"
click = "*"
coverage = "*"
matplotlib = "~=3.7.1"
numpy = "~=1.23.1"
pandas = "~=1.5.3"
pydantic = "~=1.8.2"
python-dotenv = "^0.5.1"
pyyaml = "~=6.0"
scikit-learn = "~=1.1.1"
scipy = "~=1.9.1"
seaborn = "~=0.11.2"
statsmodels="~=0.13.5"
hydra-core="~=1.3.2"
hydra-colorlog="~=1.2.0"

[tool.poetry.group.test.dependencies]
pytest="*"
pytest-cov = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
mypy = "*"
sphinx = "*"

[tool.flake8]
max-line-length = 79
max-complexity = 10

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
