[tool.poetry]
name="DIMet"
version="0.2.4"
description="A tool for Differential analysis of Isotope-labeled targeted Metabolomics data"
readme="README.md"
license = "MIT"
authors = [ 
  "Johanna Galvis Rodriguez <deisy-johanna.galvis-rodriguez@u-bordeaux.fr>",
  "Benjamin Dartigues <benjamin.dartigues@u-bordeaux.fr>",
  "Florian Specque <florian.specque@u-bordeaux.fr>",
  "Slim Karkar <slim.karkar@u-bordeaux.fr>",
  "Helge Hecht <helge.hecht@recetox.muni.cz>",
  "Bjorn Gruening <bjoern.gruening@gmail.com>",
  "Hayssam Soueidan <massyah@gmail.com>",
  "Macha Nikolski <macha.nikolski@u-bordeaux.fr>" 
  
]
maintainers = [ "Benjamin Dartigues <benjamin.dartigues@u-bordeaux.fr>" ]
repository = "https://github.com/cbib/DIMet.git"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
numpy = "^1.26.4"
scipy = "^1.12.0"
statsmodels = "^0.14.1"
pandas = "^2.2.0"
pydantic = "^2.6.1"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
scikit-learn = "^1.4.0"
seaborn = "^0.13.2"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"


[tool.poetry.group.test.dependencies]
pytest="*"
pytest-cov = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
mypy = "*"
sphinx = "*"
poetry = "*"

[tool.flake8]
max-line-length = 79
max-complexity = 10

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
